# ezfetch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
ezfetch/: __init__.py  __main__.py  colors.py  info.py  logo.py  main.py
ezfetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
